Update and rename index.html to  employee_form.html

--- a/employee_form.html
+++ b/employee_form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 </head>
 <body>
-    <form action="forrm" method="get">
+    <form action="EmployeeRegistrationServlet.java" method="get">
         Enter id: <input type="number" name="id"><br>
         Enter name: <input type="text" name="uname"><br>
         Enter designation: <input type="text" name="desig"><br>
